--- a/Tiles/uncgeo.html
+++ b/Tiles/uncgeo.html
@@ -27,7 +27,7 @@
   <div id="map"></div>
   <script>
       var map = L.map('map').setView([35.906374685982904, -79.04981671669057], 14.0);
-      L.tileLayer('file:///C%3A/Users/qrm321/Downloads/Geog%20370/Tiles/{z}/{x}/{y}.png', {
+      L.tileLayer('./{z}/{x}/{y}.png', {
         minZoom: 12,
         maxZoom: 16,
         tms: false,
